--- a/index.html
+++ b/index.html
@@ -20,17 +20,28 @@
 
 
      <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-4.jpg" alt="Slideshow Image">
-    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-2.jpg" alt="Slideshow Image">
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-1.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-3.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-4.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-5.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-6.jpg" alt="Slideshow Image">
 
 
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Konoin-1.jpg" alt="Slideshow Image">
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Konoin-3.jpg" alt="Slideshow Image">
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Konoin-5.jpg" alt="Slideshow Image">
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Konoin-6.jpg" alt="Slideshow Image">
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Konoin-7.jpg" alt="Slideshow Image">
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Konoin-1.jpg" alt="Slideshow Image">
+
+
 
     
 
-        
+   <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/jebet.png" alt="Slideshow Image">
+
+
+
         <!-- Add more images here -->
     </div>
     <script src="script.js"></script>
