--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
 
      <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/MBS-4.jpg" alt="Slideshow Image">
      <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/MBS-1.jpg" alt="Slideshow Image">
-     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/MBS-1.jpg" alt="Slideshow Image">
-     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/MBS-1.jpg" alt="Slideshow Image">
+     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/MBS-2.jpg" alt="Slideshow Image">
+     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/MBS-3.jpg" alt="Slideshow Image">
+
+
+   <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kericho-4.jpg" alt="Slideshow Image">
+   <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kericho-2.jpg" alt="Slideshow Image">
+   <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kericho-1.jpg" alt="Slideshow Image">
+
+
 
 
 
