--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kisumu-4.jpg" alt="Slideshow Image">
+
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kisumu-4.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kisumu-2.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kisumu-1.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kisumu-6.jpg" alt="Slideshow Image">
@@ -52,7 +54,9 @@
      <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/MBS-2.jpg" alt="Slideshow Image">
      <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/MBS-3.jpg" alt="Slideshow Image">
 
-     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/bungoma.jpg" alt="Slideshow Image">
+     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/kakamega-1.jpg" alt="Slideshow Image">
+     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/kakamega-2.jpg" alt="Slideshow Image">
+     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/kakamega-3.jpg" alt="Slideshow Image">
 
 <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/bungoma.jpg" alt="Slideshow Image">
 
