--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="slideshow-container">
 
 
-    <img class="slideshow" src="hhttps://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/CLOUD-1.jpg" alt="Slideshow Image">
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/CLOUD-1.jpg" alt="Slideshow Image">
 
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kisumu-4.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Kisumu-2.jpg" alt="Slideshow Image">
