--- a/index.html
+++ b/index.html
@@ -28,13 +28,21 @@
      <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-4.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-1.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-3.jpg" alt="Slideshow Image">
+
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/CLOUD-4.jpg" alt="Slideshow Image">
+
+
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-4.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-5.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-6.jpg" alt="Slideshow Image">
 
+
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nakuru-4.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nakuru-2.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nakuru-1.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nakuru-3.jpg" alt="Slideshow Image">
+
+
    
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nakuru-5.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nakuru-6.jpg" alt="Slideshow Image">
