--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-5.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nrb-6.jpg" alt="Slideshow Image">
 
+    <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/CLOUD-5.jpg" alt="Slideshow Image">
+
 
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nakuru-4.jpg" alt="Slideshow Image">
     <img class="slideshow" src="https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Cloud%20of%20GOD/Nakuru-2.jpg" alt="Slideshow Image">
